<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".View.MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:flow_horizontalGap="10dp"
        app:flow_verticalGap="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="314dp"
            android:layout_height="194dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textStyle="italic"
            app:autoSizeTextType="uniform" />

        <EditText
            android:id="@+id/enterName"
            android:layout_width="327dp"
            android:layout_height="62dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/details"
            android:backgroundTintMode="src_in"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_new_name"
            android:inputType="text"
            android:maxLength="50"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:text="@string/enter_in_app" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>