<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background"
    tools:context=".View.AccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/details"
        android:orientation="vertical"
        android:padding="10dp"
        app:flow_verticalGap="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/enter_name"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext"
                android:backgroundTint="@color/background"
                android:gravity="center|start"
                android:maxLength="50"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/nickname"
                android:textColor="@color/white"
                android:textSize="34sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edittext"
                android:backgroundTint="@color/background"
                android:gravity="center|start"
                android:spinnerMode="dropdown"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/device_type"
                android:textColor="@color/white"
                android:textSize="34sp" />
        </LinearLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/background"
            android:text="@string/save_account" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@color/details"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_manu" />
</androidx.constraintlayout.widget.ConstraintLayout>